--- a/application/views/parroquias/parroquias.twig
+++ b/application/views/parroquias/parroquias.twig
@@ -2,13 +2,13 @@
 {% block content %}
 
 <div class="table-responsive">
-	<a class="btn btn-success" href="{{ base_url('parroquias/parroquias/registrar') }}" title="">Registrar parroquia</a><br>
+	<a class="btn btn-success" href="{{ base_url('parroquias/parroquias/registrar') }}" title="">Registrar Parroquia</a><br>
 	<table class="table table-bordered table-hover table-condensed">
 		<thead>
 			<tr class="danger">
 				<th class=" text-center"># ID</th>
-				<th class=" text-center">parroquia</th>
-				<th class=" text-center">municipio</th>
+				<th class=" text-center">Parroquia</th>
+				<th class=" text-center">Municipio</th>
 				<th class=" text-center">Editar</th>
 				<th class=" text-center">Eliminar</th>
 			</tr>
