--- a/application/views/tpl/layout.twig
+++ b/application/views/tpl/layout.twig
@@ -8,7 +8,7 @@
             <div class="row row-offcanvas row-offcanvas-right">
                 <div class="col-xs-12 col-sm-9 col-sm-push-3">
                     <button type="button" class="pull-left btn btn-default visible-xs" data-toggle="offcanvas" aria-expanded="false" aria-controls="navbar">
-                        <i class="fa fa-navicon"><a href="{{ base_url('inicio/hola') }}" title="">LISTA</a></i>
+                        <i class="fa fa-navicon"><a href="" title="">Menú:</a></i>
                     </button>
                     <div class="jumbotron">
                         {% block content %}{% endblock %}
@@ -21,6 +21,8 @@
         <script src="{{ base_url('js/jquery.js') }}"></script>
         <script type="text/javascript" src="{{ base_url('js/funciones1.js') }}"></script>
         <script type="text/javascript" src="{{ base_url('js/bootstrap.min.js') }}"></script>
+        <script type="text/javascript" src="{{ base_url('js/jquery.fancybox.js') }}"></script>
+
         {% block script %}
         {% endblock %}
     </body>
